--- a/guia01/primerversion.html
+++ b/guia01/primerversion.html
@@ -18,6 +18,8 @@
     Darcs. En este tipo de herramientas, los clientes replican completamente el
     repositorio.
 </p>
-
+<p>
+    Git es una herramienta fundamental para trabajar en equipo con código de forma eficiente.
+</p>
 </body>
 </html>
