--- a/guia01/primerversion.html
+++ b/guia01/primerversion.html
@@ -19,7 +19,7 @@
     repositorio.
 </p>
 <p>
-    Git es una herramienta fundamental para trabajar en equipo con código de forma eficiente.A
+    Git es una herramienta fundamental para trabajar en equipo con código de forma eficiente.ASaadad
 </p>
 </body>
 </html>
