--- a/guia01/primerversion.html
+++ b/guia01/primerversion.html
@@ -21,5 +21,8 @@
 <p>
     Git es una herramienta fundamental para trabajar en equipo con código de forma eficiente.A
 </p>
+<p>
+    Diseño y Programación de Software Multiplataforma es una materia esencial para entender el uso de herramientas modernas como Git en proyectos colaborativos reales.
+</p>
 </body>
 </html>
